@@ -136,6 +136,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-493: moveLedgerIndexFile might have chance pickup same directory (sijie via ivank)
 
+        BOOKKEEPER-365: Ledger will never recover if one of the quorum bookie is down forever and others dont have entry (sijie via ivank)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
